# openscenario.api.test

./: .gitignore  CMakeLists.txt  CONTRIBUTING  NOTICE  README.md
Applications/OpenScenarioReader/: CMakeLists.txt
Applications/OpenScenarioReader/res/: DoubleLaneChangeExtraUnknownElement.xosc  DoubleLaneChanger.xosc  DoubleLaneChangerParamsError.xosc  DoubleLaneChangerWrongAttributes.xosc
Applications/OpenScenarioReader/res/examples_esmini/: cut-in.xosc  highway_merge_advanced.xosc
Applications/OpenScenarioReader/res/simpleImportWithParameters/: importWithParameters.xosc
Applications/OpenScenarioReader/src/: MessageLogger.h
OpenScenario/: CMakeLists.txt
OpenScenario/src/: OpenScenario.cpp
OpenScenario/src/api/: IOpenScenarioModelElement.h
OpenScenario/src/catalog/: ICatalogReferenceProvider.h
OpenScenario/src/checker/: ICheckerRule.h  RangeCheckerRule.h
OpenScenario/src/common/: DateTime.h  ErrorLevel.h  FileContentMessage.h  ILocator.h  INamedReference.h  IParserMessageLogger.h  Textmarker.h
OpenScenario/src/impl/: BaseImpl.h  NamedReferenceProxy.h
OpenScenario/src/parameter/: IParameterizedObject.h  ParameterValue.h
OpenScenario/src/parser/: ParserContext.h  ParserHelper.h  WrappedListParser.h  XmlModelGroupParser.h  XmlParserBase.h  XmlParserException.h
OpenScenario/src/parser/modelgroup/: XmlAllParser.h  XmlChoiceParser.h  XmlSequenceParser.h
OpenScenario/src/parser/type/: IXmlTypeParser.h  XmlComplexTypeParser.h  XmlGroupParser.h  XmlSimpleContentParser.h
OpenScenario/src/simple/struct/: IndexedElement.h
OpenScenario/src/xmlIndexer/: AttributeNode.h  ElementNode.h  Position.h  PositionIndex.h  PositionNode.h
OpenScenarioLib/: CMakeLists.txt
OpenScenarioLib/src/api/: IOpenScenarioModelElement.h
OpenScenarioLib/src/catalog/: CatalogCache.h  ICatalogReferenceProvider.h
OpenScenarioLib/src/checker/: ICheckerRule.h  RangeCheckerRule.h
OpenScenarioLib/src/common/: DateTime.h  FileContentMessage.h  ILocator.h  INamedReference.h  IParserMessageLogger.h  Textmarker.h
OpenScenarioLib/src/impl/: BaseImpl.h  NamedReferenceProxy.h
OpenScenarioLib/src/loader/: FileResourceLocator.h  IResourceLocator.h  MessageLoggerDecorator.h  ResourceNotFoundException.h  ScenarioLoaderException.h  XmlScenarioImportLoader.h  XmlScenarioImportLoaderFactory.h  XmlScenarioLoader.cpp
OpenScenarioLib/src/parameter/: IParameterizedObject.h  ParameterResolver.h  ParameterValue.h
OpenScenarioLib/src/parser/: ParserHelper.h  WrappedListParser.h  XmlModelGroupParser.h  XmlParserBase.h  XmlParserException.h
OpenScenarioLib/src/parser/modelgroup/: XmlAllParser.h  XmlChoiceParser.h  XmlSequenceParser.h
OpenScenarioLib/src/parser/type/: XmlComplexTypeParser.h  XmlGroupParser.h  XmlSimpleContentParser.h
OpenScenarioLib/src/simple/struct/: IndexedElement.h  XmlToSimpleNodeConverter.h
OpenScenarioLib/src/xmlIndexer/: ElementNode.h  PositionNode.h
cpp/: Build using cmake-gui.md  CMakeHelpers.cmake  CMakeLists.txt  CMakePresets.json  README.md
cpp/.root/: dependencies.json
cpp/Applications/IndexerTester/: CMakeLists.txt
cpp/Applications/OpenScenarioReader/: CMakeLists.txt
cpp/Applications/OpenScenarioReader/res/: DoubleLaneChangerCheckerErrors.xosc  DoubleLaneChangerWrongEndElement.xosc  DoubleLaneChangerWrongTextNode.xosc
cpp/Applications/OpenScenarioReader/src/: OpenScenarioReader.cpp
cpp/Applications/OpenScenarioTester/: CMakeLists.txt
cpp/Applications/OpenScenarioTester/src/: TestImports.h
cpp/OpenScenarioLib/: CMakeLists.txt
cpp/OpenScenarioLib/src/api/: IOpenScenarioModelElement.h
cpp/OpenScenarioLib/src/catalog/: ICatalogReferenceProvider.h
cpp/OpenScenarioLib/src/common/: ErrorLevel.h  Textmarker.h
cpp/OpenScenarioLib/src/impl/: NamedReferenceProxy.h
cpp/OpenScenarioLib/src/loader/: IScenarioLoader.h  IScenarioLoaderFactory.h  OpenScenarioProcessingHelper.h  ResourceNotFoundException.h  XmlScenarioLoader.h  XmlScenarioLoaderFactory.h  ZipResourceLocator.h
cpp/OpenScenarioLib/src/parameter/: ParameterValue.h
cpp/OpenScenarioLib/src/parser/: ParserContext.h  XmlParserBase.h  XmlParserException.h
cpp/OpenScenarioLib/src/xmlIndexer/: AttributeNode.h  ElementNode.h  Position.h  PositionIndex.h
cpp/antlr4/: XMLLexer.g4  XMLParser.g4
cpp/applications/expressionsTester/: CMakeLists.cmake  CMakeLists.txt
cpp/applications/indexerTester/: CMakeLists.txt  productInfo.txt
cpp/applications/indexerTester/rc/: IndexerTester.rc
cpp/applications/openScenarioReader/: CMakeLists.txt  productInfo.txt
cpp/applications/openScenarioTester/: CMakeLists.txt  productInfo.txt
cpp/buildAntlr4/: ExternalAntlr4Cpp.cmake
cpp/buildArtifact/: CMakeLists.txt.template  clean.sh  collectHeaderFiles.sh  copyExamples.sh  createCMakeLists.sh  createCMakeListsTemplate.sh  createHeaderWithExports.sh  createLinuxWindowsBinPackage.sh  d2u.sh  generateLinux.sh  generateWindows.bat  generate_Linux.sh  msbuildcmd.txt
cpp/common/: MemLeakDetection.h  companyInfo.txt  rc.template  version.h
cpp/doc/: README.md  main.adoc
cpp/expressionsLib/: CMakeLists.txt  main.cpp  productInfo.txt
cpp/expressionsLib/inc/: EvaluatorListener.h  ExprType.h  ExprValue.h  OscExprEvaluator.h  OscExprEvaluatorFactory.h  OscExprEvaluatorImpl.h  OscExprExportDefs.h  ParseErrorListener.hpp  SemanticException.h  version.h
cpp/expressionsLib/rc/: ExpressionsLib.rc  OpenScenarioLib.rc  resource.h
cpp/expressionsLib/src/: EvaluatorListener.cpp  ExprType.cpp  ExprValue.cpp  OscExprEvaluator.cpp  OscExprEvaluatorFactory.cpp  OscExprEvaluatorImpl.cpp  SemanticException.cpp
cpp/externalLibs/ANTLR4-Cpp-src/: ANTLR4-Cpp-src.radepend.template  CMakeLists.txt
cpp/externalLibs/TinyXML2/: RALicenseInformation.xml
cpp/externalLibs/UtfCpp/: utf8.h
cpp/externalPackages/: uuid-dev_2.31.1-0.4ubuntu3.7_amd64.deb  uuid-dev_2.31.1-0.4ubuntu3_amd64.deb
cpp/openScenarioLib/: CMakeLists.txt  headers.cmake  productInfo.txt  sources.cmake
cpp/openScenarioLib/rc/: OpenScenarioLib.rc
cpp/openScenarioLib/v1_0/: CMakeLists.txt  productInfo.txt
cpp/openScenarioLib/v_1_0/: CMakeLists.txt
(+1154 files in other folders)
